[package]
name = "toxcompare"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
charts-rs = { version = "0.3.27", features = ["image", "image-encoder", "resvg"] }
clap = { version = "4.5.53", features = ["derive"] }
eval-metrics = "1.0.2"
figlet-rs = "0.1.5"
ndarray = "0.17.1"
ndarray-linalg = "0.18.0"
ndarray-stats = "0.6.0"
plotpy = "1.14.0"
rayon = "1.11.0"
serde_json = "1.0.145"
smartcore = "0.4.8"
sqlite = "0.37.0"
tokio = { version = "1.48.0", features = ["full"] }
