[package]
name = "toxannotator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
figlet-rs = "0.1.5"
ndarray = "0.17.1"
ndarray-linalg = "0.18.0"
ndarray-stats = "0.6.0"
plotpy = "1.14.0"
rayon = "1.11.0"
serde_json = "1.0.145"
smartcore = "0.4.8"
tokio = { version = "1.48.0", features = ["full"] }
