[package]
name = "toxannotator"
version = "0.2.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "tox annotator for ToxDB"
homepage = "https://github.com/rustcodepro/toxannotator"
repository = "https://github.com/rustcodepro/toxannotator"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
figlet-rs = "0.1.5"
plotpy = "1.14.0"
rayon = "1.11.0"
